--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
     </div>
     <div class="content">
       <div class="textBx">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Sed beatae aliquam recusandae fugiat quod amet. Accusamus
-        autem eius recusandae? Deserunt optio blanditiis neque aspernatur
-        eveniet nisi id odio pariatur veniam? <br><br>I am passionate web developer
+        <p>I am passionate web developer
         I’ve been writing code since my early days of middle school when I was using
-        Q-Basic and Pascal.<br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+        Q-Basic and Pascal.<br><br>
+        Back in 2001, along with studying in high school, I completed a
+        two-year program in information technology. The love for
+        programming has lived in me all the years.
+        <br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
         Sed beatae aliquam recusandae fugiat quod amet. Accusamus
         autem eius recusandae? Deserunt optio blanditiis neque aspernatur
         eveniet nisi id odio pariatur veniam?</p>
