--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
       <div class="textBx">
         <p>I am passionate web developer
         I’ve been writing code since my early days of middle school when I was using
-        Q-Basic and Pascal.<br><br>
-        Back in 2001, along with studying in high school, I completed a
+        Q-Basic and Pascal. Back in 2001, along with studying in high school, I completed a
         two-year program in information technology. The love for
         programming has lived in me all the years.
-        <br><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-        Sed beatae aliquam recusandae fugiat quod amet. Accusamus
-        autem eius recusandae? Deserunt optio blanditiis neque aspernatur
-        eveniet nisi id odio pariatur veniam?</p>
+        <br><br>At the moment, trying to keep up with the times, I finished
+        the Full Stack Web developer bootcamp from the training center
+        Londonappbrewery, UK. And not stopping at what has been achieved I took
+        the Phyton course. One of my goals includes constantly improving my expertise in
+        web development. <br><br>My objective is to create and maintain optimally functional
+        websites and applications as tools in achieving the company’s mission
+        and vision. As a part of a competent web developing team,
+        I intend to generate maximum traffic to these projects by showcasing
+        high-quality SEO content, user- and mobile-friendly navigation,
+        and promotion to as many social media platforms as possible.</p>
       </div>
       <div class="imgBx">
         <img src="img/UC1.jpg" alt="Kate_Polyakov's_Portfolio">
