--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <div class="textBx">
         <p>I am passionate web developer
         I’ve been writing code since my early days of middle school when I was using
-        Q-Basic and Pascal. Back in 2001, along with studying in high school, I completed a
+        Q-Basic and Pascal. Back in time, along with studying in high school, I completed a
         two-year program in information technology. The love for
         programming has lived in me all the years.
         <br><br>At the moment, trying to keep up with the times, I finished
