--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="skillsBx">
         <img src="img/python.png" alt="python">
         <h2>Python</h2>
-        <p>Beginner level.<br>In the process of acquiring   <br> skills and knowledge</p>
+        <p>Beginner level.<br>In the process of acquiring   <br> skills and knowledge.</p>
       </div>
 
       <div class="skillsBx">
@@ -229,21 +229,21 @@
       <div class="contactForm">
       <div class="row">
         <div class="col50">
-          <input type="text" name="yourName" placeholder="First Name">
+          <input type="text" autocomplete="on" name="yourName" placeholder="First Name">
         </div>
         <div class="col50">
-          <input type="text" name="yourLastName" placeholder="Last Name">
+          <input type="text" autocomplete="on" name="yourLastName" placeholder="Last Name">
         </div>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col50">
           <input type="text" name="yourEmail" placeholder="Email">
         </div>
         <div class="col50">
           <input type="text" name="yourMobileNo" placeholder="Mobile No.">
         </div>
-      </div>
+      </div> -->
 
       <div class="row">
         <div class="col100">
