--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@
       <div class="contactForm">
       <div class="row">
         <div class="col50">
-          <input type="text" autocomplete="on" name="yourName" placeholder="First Name">
+          <input type="text" autocomplete="additional-name" name="yourName" placeholder="First Name">
         </div>
         <div class="col50">
-          <input type="text" autocomplete="on" name="yourLastName" placeholder="Last Name">
+          <input type="text" autocomplete="cc-family-name" name="yourLastName" placeholder="Last Name">
         </div>
       </div>
 
