--- a/index.html
+++ b/index.html
@@ -55,21 +55,18 @@
     </div>
     <div class="content">
       <div class="textBx">
-        <p>I am passionate web developer
-        I’ve been writing code since my early days of middle school when I was using
-        Q-Basic and Pascal. Back in time, along with studying in high school, I completed a
-        two-year program in information technology. The love for
-        programming has lived in me all the years.
-        <br><br>At the moment, trying to keep up with the times, I finished
-        the Full Stack Web developer bootcamp from the training center
-        Londonappbrewery, UK. And not stopping at what has been achieved I took
-        the Phyton course. One of my goals includes constantly improving my expertise in
-        web development. <br><br>My objective is to create and maintain optimally functional
-        websites and applications as tools in achieving the company’s mission
-        and vision. As a part of a competent web developing team,
-        I intend to generate maximum traffic to these projects by showcasing
-        high-quality SEO content, user- and mobile-friendly navigation,
-        and promotion to as many social media platforms as possible.</p>
+        <p>I have been a passionate web developer since middle school where I was using Q-Basic and Pascal.
+        In high school, I completed a two-year program in Information Technology.
+        More recently, I finished the Full Stack Web developer bootcamp from the
+        Londonappbrewery training centre, UK and took the Phyton course. One
+        of my goals is continuous improvement of my web development expertise.
+        <br><br>My dream job is working in a competent and supportive web developing
+        team that creates reliable and functional websites and applications that help
+        achieving customers their goals. I would like to best utilize my abilities by
+        generating maximum traffic to clients’ web projects by showcasing high-quality
+        SEO content, user- and mobile-friendly navigation and promotion to as many social
+        media platforms as possible.
+      </p>
       </div>
       <div class="imgBx">
         <img src="img/UC1.jpg" alt="Kate_Polyakov's_Portfolio">
