--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           if (h > 3 && h < 12) document.writeln("Good morning.");
           if (h > 11 && h < 19) document.writeln("Hello.");
           if (h > 18 && h < 24) document.writeln("Good evening.");
-          if (h > 23 || h < 4 ) document.wtriteln("Good night." ) ;
+          if (h > 23 || h < 4 ) document.writeln("Good night." ) ;
           </script>
           </span> I'm</h4>
         <h2>Kate Polyakov</h2>
